--- a/package.json
+++ b/package.json
@@ -8,24 +8,28 @@
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.11",
-        "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-react": "^4.6.0",
+        "@tailwindcss/vite": "^4.1.11",
+        "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.21",
         "axios": "^1.10.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
+        "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "date-fns": "^4.1.0",
         "file-saver": "^2.0.5",
+        "formik": "^2.4.6",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.525.0",
+        "notistack": "^3.0.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-dropzone": "^14.3.8",
@@ -34,6 +38,7 @@
         "react-pdf": "^10.0.1",
         "react-router-dom": "^7.6.3",
         "recharts": "^3.0.2",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "yup": "^1.6.1"
     }
 }
